use lists instead of sets for test cases in TestSuite to keep order consistent